Refactored controllers and added authorization to methods + keeping sonar happy